--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,17 @@
   color: #61dafb;
 }
 
+
+.buttonBox {
+  width: 100%;
+  height:calc(100%-100px);
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-template-rows: repeat(5,1fr);
+  grid-gap:10px
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
